@@ -109,12 +109,15 @@
   window.customSelectObserver = new MutationObserver(selectMutation);
   for (let i=0, len=window.customSelects.length; i<len; ++i) {
    setSelectStyle(window.customSelects[i]);
-
+   window.customSelects[i].select.setValue = function(val) {
+    window.customSelects[i].select.value = val;
+    window.customSelects[i].value = val;
+   }
    // If select is close to bottom then need to scroll into view...
    window.customSelects[i].container.addEventListener('custom-select:open', (e) => {
     if (e.target.customSelect.disabled) {
      e.target.customSelect.open=false;
-     return;
+      return;
     }
     let wh = window.innerHeight;
     let rect = window.customSelects[i].panel.getBoundingClientRect();
